<resources>
    <string name="app_name">Iris</string>
    <string name="hint_usuario">Usuario...</string>
    <string name="hint_email">Email...</string>
    <string name="hint_password">Password...</string>
    <string name="registro">Eres nuevo? Registrate</string>
    <string name="olvidar_contraseña">Olvidaste tu contraseña?</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_recuperar">RECUPERAR</string>
    <string name="btn_registro">REGISTRO</string>
    <string name="item_cerrar_sesion">CERRAR SESION</string>
    <string name="item_salir">SALIR</string>
    <string name="inicio_sesion">Ya tienes cuenta? Inicia sesion</string>
    <string name="buscador">Buscador</string>
    <string name="artistas">Artistas</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="Recordatorios_entradas">Recordatorios</string>
    <string name="titulo_recyclerView">Artistas</string>
    <string name="boton_volver">VOLVER</string>
    <string name="mapas">Conciertos</string>
    <string name="hint_nombre">Nombre..</string>
    <string name="tipo">TIPO</string>
    <string name="entradas_vip">VIP</string>
    <string name="entradas_basica">BASICA</string>
    <string name="extras">Extras</string>
    <string name="aperitivos">APERITIVOS</string>
    <string name="merchandising">MERCHANDISING</string>
    <string name="zona">ZONA</string>
    <string name="btn_recordatorio">GUARDAR</string>
    <string name="btn_editar_recordatorio">EDITAR</string>
    <string name="darseDeBaja_Confirmacion">¿Estás seguro de que quieres darte de baja?</string>
    <string name="cerrarSesion_Confirmacion">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="afirmativo">Si</string>
    <string name="negativo">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salirDeLaAplicacion">¿Estás seguro de que quieres salir?</string>
    <string name="eliminarRecordatorio">¿Estás seguro de que quieres eliminar este recordatorio?</string>
</resources>