<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogo_darseDeBaja"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_darseDeBaja"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/fondo_principal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/darseBaja_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="28dp"
            android:text="@string/darseDeBaja_Confirmacion"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/layout_darseDeBaja" />

        <Button
            android:id="@+id/btn_afirmativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:backgroundTint="@color/green"
            android:text="@string/afirmativo"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/btn_negativo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/darseBaja_titulo" />

        <Button
            android:id="@+id/btn_negativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:backgroundTint="@color/red"
            android:text="@string/negativo"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_afirmativo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_afirmativo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imagenConfirmacion"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toTopOf="@id/layout_darseDeBaja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/layout_darseDeBaja"
        app:srcCompat="@drawable/perfil" />


</androidx.constraintlayout.widget.ConstraintLayout>