<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_principal"
    android:elevation="5dp"
    tools:context=".Principal">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@drawable/top_fondo">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/fondo"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_usuario"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    app:srcCompat="@drawable/usuario" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/cardViewFoto"
                app:layout_constraintStart_toStartOf="@+id/cardViewFoto"
                app:layout_constraintTop_toBottomOf="@+id/cardViewFoto" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_usuario"
                app:layout_constraintStart_toStartOf="@+id/tv_usuario"
                app:layout_constraintTop_toBottomOf="@+id/tv_usuario" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBuscador"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/boton"
        app:cardCornerRadius="5dp"
        app:cardElevation="12dp"
        app:contentPadding="5dp"
        app:layout_constraintEnd_toStartOf="@+id/cardViewArtistas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_buscador"
                android:layout_width="65dp"
                android:layout_height="53dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/buscador" />

            <TextView
                android:id="@+id/tv_buscador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/buscador"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewArtistas"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/boton"
        app:cardCornerRadius="5dp"
        app:cardElevation="12dp"
        app:contentPadding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardViewBuscador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewBuscador"
        app:layout_constraintTop_toTopOf="@+id/cardViewBuscador">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_artistas"
                android:layout_width="65dp"
                android:layout_height="53dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/cantante" />

            <TextView
                android:id="@+id/tv_artistas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/artistas"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewConciertos"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/boton"
        app:cardCornerRadius="5dp"
        app:cardElevation="12dp"
        app:contentPadding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardViewRecordatorios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewRecordatorios"
        app:layout_constraintTop_toTopOf="@+id/cardViewRecordatorios">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_conciertos"
                android:layout_width="65dp"
                android:layout_height="53dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/mapa_conciertos" />

            <TextView
                android:id="@+id/tv_mapas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/mapas"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRecordatorios"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/boton"
        app:cardCornerRadius="5dp"
        app:cardElevation="12dp"
        app:contentPadding="5dp"
        app:layout_constraintEnd_toStartOf="@+id/cardViewConciertos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewBuscador">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_recordatorios"
                android:layout_width="65dp"
                android:layout_height="53dp"
                android:layout_gravity="bottom|center"
                app:srcCompat="@drawable/concierto" />

            <TextView
                android:id="@+id/tv_reservas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/Recordatorios_entradas"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCerrarSesion"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/boton"
        app:cardCornerRadius="5dp"
        app:cardElevation="12dp"
        app:contentPadding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/cardViewRecordatorios"
        app:layout_constraintStart_toStartOf="@+id/cardViewRecordatorios"
        app:layout_constraintTop_toBottomOf="@+id/cardViewRecordatorios">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_cerrarSesion"
                android:layout_width="65dp"
                android:layout_height="53dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/cerrado" />

            <TextView
                android:id="@+id/tv_cerrarSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/cerrarSesion"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>